@@ -1,0 +1,8 @@
+( Easting, Northing, Altitude )
+(    0.00,     0.00,     0.00 ) 1
+(    0.00,     0.00,     0.00 ) a.1
+(   10.00,     0.00,     0.00 ) a.2
+(   10.00,     0.00,     0.00 ) b.1
+(   10.00,    10.00,     0.00 ) b.2
+(   10.00,    10.00,     0.00 ) c.1
+(   10.00,     0.00,     0.00 ) c.2
